# CellFlow

./: .gitignore  CLAUDE.md  LICENSE  README.md  SERVER_README.md  gpuSetup.js  index.html  main.js  package-lock.json  package.json  simShader.js  yt_download_20250626_111425_Cell Flow. A New Kind of Particle Simulation Algorithm.md
cuda-native/: CMakeLists.txt  README.md  build.sh  eater.json  littlecells.json  pulser.json  settings.json  test-cuda.cu
cuda-native/docs/: future-effects.md  parameter-descriptions.md  performance-screenshots.md
cuda-native/include/: CellFlowWidget.h  MainWindow.h  ParticleSimulation.cuh  SimulationParams.h
cuda-native/screenshots/: README.md
cuda-native/src/: CellFlowWidget.cpp  MainWindow.cpp  ParticleSimulation.cu  main.cpp
docs/: GPU_ALTERNATIVES_ANALYSIS.md  MIGRATION_GUIDE.md
docs/adr/: ADR-001-surface-rendering-from-particles.md
presets/: 5.json  7.json
src/: server.ts
src/css/: style.css
src/js/: gpuSetup.js  main.js
src/native/: benchmark-comparison.js  hybrid-server.js  node-webgpu-compute.js
src/shaders/: renderShader.js
